@@ -4,6 +4,7 @@ Revision history for Bytes::Random::Secure
   - Clarified the (small) magnitude of the performance issues surrounding
     random_string_from() (MODULO BIAS section of POD). (DANAJ's suggestion.)
   - Added a test for _closest_divisor().
+  - Added a POD section discussing ISAAC's strengths.
 
 0.22 2013-01-29
   - Implement suggestions from Dana Jacobsen (Unicode tests, specify minimum 
